--- a/src/main/resources/templates/fragments/auth.html
+++ b/src/main/resources/templates/fragments/auth.html
@@ -229,10 +229,10 @@
                                 aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form method="get" th:action="@{/}">
+                        <form method="post" th:action="@{/create}">
                             <div class="mb-3">
-                                <label for="folderName" class="col-form-label">Folder name</label>
-                                <input class="form-control" id="folderName" name="path" th:value="${param.path}">
+                                <label for="createQuery" class="col-form-label">Folder name</label>
+                                <input class="form-control" id="createQuery" name="createQuery" th:value="${param.path}">
                             </div>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Create</button>
