--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -13,7 +13,7 @@
     <title>Cloud Storage</title>
 </head>
 <body>
-<div th:insert="~{fragments/not-auth :: header}"></div>
+<div th:insert="~{fragments/not-auth/header :: header}"></div>
 <h1>Please Log In</h1>
 <div th:if="${param.error}">
     Invalid credentials.
