--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -13,7 +13,7 @@
     <title>Cloud Storage</title>
 </head>
 <body>
-<div th:insert="fragments/not-auth :: header"></div>
+<div th:insert="fragments/not-auth/header :: header"></div>
 <h1>Please Signup</h1>
 <div th:if="${errorMessage}">
     <p th:text="${errorMessage}">Error message</p>
